# llm-bedrock-nova

./: README.md  llm_bedrock_nova.py  pyproject.toml  setup.mk
